[package]
name = "aoc-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ahash.workspace = true
aoc = { path = "./lib" }
camino = "1.1.6"
hashbrown.workspace = true
pest = "2.7.5"
pest_derive = "2.7.5"

[workspace]
resolver = "2"
members = [
	"macro"
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.73.0"

[workspace.dependencies]
ahash = "0.8.6"
hashbrown = "0.14.2"
