[package]
name = "aoc-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ahash.workspace = true
aoc = { path = "./lib" }
camino = "1.1.6"
fancy-regex = "0.11.0"
hashbrown.workspace = true
itertools = "0.11.0"
md-5 = "0.10.6"
pest = "2.7.5"
pest_derive = "2.7.5"
serde = "1.0.190"
serde_json = "1.0.107"

[workspace]
resolver = "2"
members = [
	"macro"
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.73.0"

[workspace.dependencies]
ahash = "0.8.6"
hashbrown = "0.14.2"
