[workspace]
resolver = "2"
members = [
	"rust/*"
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.73.0"

[workspace.dependencies]
ahash = "0.8.6"
aoc = { path = "./rust/lib" }
camino = "1.1.6"
fancy-regex = "0.11.0"
hashbrown = "0.14.2"
itertools = "0.11.0"
md-5 = "0.10.6"
pest = "2.7.5"
pest_derive = "2.7.5"
serde = "1.0.190"
serde_json = "1.0.107"
