[package]
name = "aoc-2015-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ahash.workspace = true
aoc.workspace = true
camino.workspace = true
fancy-regex.workspace = true
hashbrown.workspace = true
itertools.workspace = true
md-5.workspace = true
pest.workspace = true
pest_derive.workspace = true
serde.workspace = true
serde_json.workspace = true
